; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/misc/extr_ugold.c_ugold_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/misc/extr_ugold.c_ugold_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ugold_softc = type { i32, i32, i32, i32*, i32 }

@UGOLD_N_TRANSFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ugold_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ugold_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ugold_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.ugold_softc* @device_get_softc(i32 %4)
  store %struct.ugold_softc* %5, %struct.ugold_softc** %3, align 8
  %6 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %7 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %6, i32 0, i32 4
  %8 = call i32 @callout_drain(i32* %7)
  %9 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %10 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @usb_proc_explore_lock(i32 %11)
  %13 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %14 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %17 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %16, i32 0, i32 3
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %21 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %20, i32 0, i32 3
  %22 = load i32*, i32** %21, align 8
  %23 = getelementptr inbounds i32, i32* %22, i64 1
  %24 = call i32 @usb_proc_explore_mwait(i32 %15, i32* %19, i32* %23)
  %25 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %26 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 8
  %28 = call i32 @usb_proc_explore_unlock(i32 %27)
  %29 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %30 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @UGOLD_N_TRANSFER, align 4
  %33 = call i32 @usbd_transfer_unsetup(i32 %31, i32 %32)
  %34 = load %struct.ugold_softc*, %struct.ugold_softc** %3, align 8
  %35 = getelementptr inbounds %struct.ugold_softc, %struct.ugold_softc* %34, i32 0, i32 0
  %36 = call i32 @mtx_destroy(i32* %35)
  ret i32 0
}

declare dso_local %struct.ugold_softc* @device_get_softc(i32) #1

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @usb_proc_explore_lock(i32) #1

declare dso_local i32 @usb_proc_explore_mwait(i32, i32*, i32*) #1

declare dso_local i32 @usb_proc_explore_unlock(i32) #1

declare dso_local i32 @usbd_transfer_unsetup(i32, i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
